--- a/_posts/2018-07-26-FC-AIDE.md
+++ b/_posts/2018-07-26-FC-AIDE.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "FC-AIDE"
+title:  "Upload a new paper to arxiv"
 subtitle:   "New paper and code"
 categories: essay
 tags : essay
 ---
  
-I submmited new paper, ***Fully Convolutional Neural Adaptive Image Denoiser***, to NIPS2018.  
-This is [my paper](https://arxiv.org/abs/1807.07569) and [code](https://github.com/csm9493/FC-AIDE).
+I uploaded my new paper, ***Fully Convolutional Neural Adaptive Image Denoiser***, to arxiv.  
+This is [paper link](https://arxiv.org/abs/1807.07569) and [code](https://github.com/csm9493/FC-AIDE).
