--- a/_posts/2018-04-01-NAIDE.md
+++ b/_posts/2018-04-01-NAIDE.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Accepted a new paper in ICASSP 2018!"
 subtitle:   "New paper and code"
-categories: essay
-tags : essay
+categories: research
+tags : research
 ---
  
 My new paper is accepted in ICASSP 2018 as a poster presentation, ***Neural Adaptive Image Denoiser***.  
