--- a/_posts/2018-07-26-FC-AIDE.md
+++ b/_posts/2018-07-26-FC-AIDE.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Upload a new paper to arxiv"
 subtitle:   "New paper and code"
-categories: essay
-tags : essay
+categories: research
+tags : research
 ---
  
 I uploaded my new paper, ***Fully Convolutional Neural Adaptive Image Denoiser***, to arxiv.  
